<resources>
    <string name="app_name">PopularMovies</string>
    <string name="error_message">An error occurred. Try again later.</string>
    <string name="content_description_poster">Poster of the movie</string>
    <string name="hint_tv_title">Title should be here</string>
    <string name="hint_tv_release">Release date should be here</string>
    <string name="hint_tv_rating">Rating should be here</string>
    <string name="hint_tv_overview">Overview should be here</string>
    <string name="menu_item_popular">Popular Movies</string>
    <string name="menu_item_top_rated">Top Rated Movies</string>
    <string name="mark_as_favorite">Save as favorite!</string>
    <string name="marked_as_favorite">One of your favorites!</string>
    <string name="trailers_label">Trailers</string>
    <string name="overview_label">Overview</string>
    <string name="hint_trailer_title">Trailer title</string>
    <string name="content_description_play_button">Play button</string>
    <string name="reviews_label">Reviews</string>
    <string name="content_description_star_favorite">A star for making favorite</string>
    <string name="hint_review_author">Review author should be here</string>
    <string name="hint_review_content">Review content should be here</string>
    <string name="menu_item_favorites">Favorites</string>
    <string name="menu_item_now_playing">Now Playing</string>
    <string name="menu_item_upcoming">Upcoming Movies</string>
    <string name="sharing_button">Sharing is caring! Click here to share the link of the trailer video.</string>
</resources>
