<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/popular"
        android:title="@string/menu_item_popular"
        android:orderInCategory="1"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/top_rated"
        android:title="@string/menu_item_top_rated"
        android:orderInCategory="1"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/upcoming"
        android:title="@string/menu_item_upcoming"
        android:orderInCategory="1"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/now_playing"
        android:title="@string/menu_item_now_playing"
        android:orderInCategory="1"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/favorite"
        android:title="@string/menu_item_favorites"
        android:orderInCategory="1"
        app:showAsAction="collapseActionView"/>
</menu>